css/style.css
/* ... */
.archive {
    margin: 0 0 50px 0;
    font-size: 18px;
}

.archive .post-item {
    padding: 10px 0px;
    overflow-x: hidden;
    white-space:nowrap;
}

.archive .post-time {
    display: inline-block;
    width: 60px;
    margin: 0;
    color: #8a8a8a;
}

@media screen and (max-width: 768px) {
    .archive .post-time {
        margin: 0px 0px 10px 0px;
        width: auto;
        display: block;
    }
}

.archive .post-link {
    color: #8a8a8a;
}

.archive .post-item:hover {
    //color: #BAAF9E;
    transition: 0.3s ease-out;
}
.archive .post-item:hover .post-link {
    //color: #BAAF9E;
}

.fa.fa-heart:hover {
    color: #ff3356;
    transition: 0.7s ease-out;
    cursor: pointer;
}


/* CUSTOM ADDITIONS */

#social {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

a.symbol {
    color: #cdd4da;
    font-size: 2rem;
    text-decoration: none;
    margin-right: 0.3rem;
}

a.symbol:hover {
    color: #BCD4DA;
}


/**
 * Table of content
 */
#toc {
  line-height: 1em;
  font-size: .7em;
  word-wrap: break-word;
  padding: 8px;
  padding-left: 16px;
  padding-bottom: 14px;
  margin: 0 0 25px 0;
  display: block;
  color: #808080;
  background: #fff;
  border: none;
  box-shadow: inset 0 0 0 1px #E4EBF2;
  border-radius: 4px;
  overflow: hidden;
  font-family: 'Menlo', 'Monaco', Courier, monospace;
}
#TableOfContents {
  margin: 1em 0 0 0;
  overflow-x: auto;
  word-wrap: normal;
  word-break: break-all;
  white-space: nowrap;
}
#TableOfContents ul {
  list-style-type:none;
  margin: 0;
  padding: 0 .5em;
}
#TableOfContents ul li {
  list-style-type: none;
  line-height: 1.7em;
}
#TableOfContents > ul {
  padding: 0;
}
#TableOfContents > ul > li > ul {
  padding: 0;
}
#TableOfContents a code{
  font-family: Menlo, Monaco, Courier;
  background-color: #fff;
  font-size: 13px;
  padding: 2px 3px;
  font-weight: 100;
}


/**
 * tags page
 */

#wrapper.tags {
  padding: 0px 40px 20px 40px;
}
.page-tags {
    text-align: center;
}

.page-tags .tags {
    font: "Roboto", "Helvetica Neue Light", Helvetica, Arial, sans-serif;
    font-weight: 300;
    margin: 10px 15px;
    text-transform: lowercase;
    display: inline-block;
}

.page-tags .tags a {
    color: #aaa;
}

